# todo-list

./: .gitignore  .pylintrc  README.md  alembic.ini  app.py  crud.py  crypto.py  db.py  docker-compose.yaml  docker-compose.yml  fast_api_test.py  models.py  oauth.py  pyproject.toml  pytest.ini  python-app.yml  requirements-dev.txt  requirements.txt  schemas.py  settings.py  tasks_crud.py  users_crud.py
.github/workflows/: to-do-app.yml
ansible/: ansible_key  deploy.yml  main.yaml  requirements.yml
ansible/tasks/: prepare_disks.yaml
crud/: helpers.py  tasks.py  users.py
migrations/: 1.sql  env.py
migrations/versions/: 30383fbd4ed1_creating_todos_table.py  6d7b342e1214_adding_test_column.py  bd5cbf161eca_adding_users_table.py
routers/: api_v1.py  auth.py  db_functions.py  misc_routes.py  tasks.py  users.py
scheduler/: helpers.py  scheduler.py
templates/: email.template
terraform/: .terraform.lock.hcl  compute.tf  main.tf  output.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
tests/: conftest.py  helpers.py  test_app.py  test_tasks.py  test_users.py
todo-list-app/: .pylintrc  Dockerfile  alembic.ini  db.py  entrypoint.sh  oauth.py  pyproject.toml  schemas.py  settings.py
todo-list-app/crud/: helpers.py  users.py
todo-list-app/migrations/: env.py
todo-list-app/migrations/versions/: bd5cbf161eca_adding_users_table.py  (+2 more)
todo-list-app/routers/: helpers.py  main_router.py  misc_routes.py  tasks.py  users.py
todo-list-app/scheduler/: helpers.py  scheduler.py
todo-list-app/templates/: email.template
todo-list-app/tests/: helpers.py
(+1 files in other folders)
