[tool.poetry]
name = "todo-list"
version = "0.1.0"
description = "A simple To-Do list application built with FastAPI, allowing users to create, read, update, and delete tasks."
authors = ["Misael Ramirez <misaelramirezf@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.13.1"
APScheduler = "^3.10.4"
bcrypt = "=4.1.2"
fastapi = "^0.115.0"
fastapi-users = "^13.0.0"
asyncpg = "^0.29.0"
fastapi-users-db-sqlalchemy = "^6.0.1"
httpx = "^0.27.2"
pydantic = "^2.9.2"
python-dotenv = "^1.0.1"
python-jose = "^3.3.0"
SQLAlchemy = "^2.0.35"
time-machine = "^2.15.0"
uvicorn = "^0.30.6"
mailtrap = "^2.0.1"
pytz = "^2024.2"

[tool.poetry.group.dev.dependencies]
pylint = "^3.2.7"
pylint-flask = "^0.6"
pylint-flask-sqlalchemy = "^0.2.0"
pytest = "^8.3.3"
pytest-env = "^1.1.5"
pytest-asyncio = "=0.21.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
